server/vm-k8s/k8s/base/nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy: {}
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      hostAliases:
        - ip: "192.168.111.129"
          hostnames:
          - "office.morawskim.pl"
          - "nextcloud.morawskim.pl"
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config
      - name: nextcloud-apps
        persistentVolumeClaim:
          claimName: nextcloud-apps
      containers:
      - name: nextcloud-exporter
        image: xperimental/nextcloud-exporter:0.7.0
      - image: nextcloud:33-apache
        name: nextcloud
        volumeMounts:
        - name: nextcloud-data
          mountPath: /data
        - name: nextcloud-config
          mountPath: /var/www/html/config
        - name: nextcloud-apps
          mountPath: /var/www/html/custom_apps
        resources: {}
status: {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-mysql
spec:
  selector:
    matchLabels:
      app: nextcloud-mysql
  serviceName: "nextcloud-mysql"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: nextcloud-mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:5.7
        args:
        - --sort_buffer_size=2M
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: 64M
          limits:
            memory: 380M
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "microk8s-hostpath"
      resources:
        requests:
          storage: 500Mi
