server/vm-k8s/k8s/base/nextcloud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - port: 80
    name: http
  - port: 9205
    name: metrics
  selector:
    app: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mysql
  labels:
    app: nextcloud-mysql
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: nextcloud-mysql
