server/vm-k8s/k8s/base/nextcloud/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nextcloud.10.0.2.15.nip.io`)
      services:
        - kind: Service
          name: nextcloud
          port: 80
      middlewares:
        - name: add-x-forwarded-proto
